# trac

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  markdown-page.html  requirements.txt  setup.py  sitemap.xml
_deprecated/: README.md
adk/: README.md  setup.py  (+1 more)
adk_new/trac/: pyproject.toml
adk_new/trac/tests/: conftest.py  test_docker.py  test_k8s.py  test_schema.py
adk_new/trac/trac/builder/: __init__.py  build.py
adk_new/trac/trac/cli/: main.py
adk_new/trac/trac/runtime/: base.py  k8s.py
adk_new/trac/trac/schema/: __init__.py
examples/time-series/: README.md  pyproject.toml  trac.json
examples/time-series/auto_timeseries/: main.py
examples/time-series/data/: parameters.json
examples/time-series/data/output/: forecast.csv  prediction.csv
examples/vrp-demo-script/: README.md  pyproject.toml  trac.json
examples/vrp-demo-script/data/: locations.csv  parameters.json  solution.csv  time_window.csv
examples/vrp-demo-script/data/run/: input.json
examples/vrp-demo-script/scripts/: build.py
examples/vrp-demo-script/vrp_demo_script/: main.py  utils.py
runtime/: pyproject.toml
runtime/trac_runtime/: schema.py
runtime/trac_runtime/executors/: base.py  docker.py  k8s.py
runtime/trac_runtime/tests/: conftest.py  test_docker.py  test_k8s.py  test_schema.py
trac-ui/: manage.py  pyproject.toml  requirements.txt
trac-ui/apps/app_run/: forms.py  models.py  services.py  tests.py  urls.py  views.py
trac-ui/apps/app_run/migrations/: 0002_apprun_job_handle_apprun_output_dataset.py
trac-ui/apps/app_run/templates/app_run/: create_run.html  view_run_logs.html
trac-ui/apps/data_gateway/: data_gateway_views.py  forms.py  models.py  schema_utils.py  tests.py  urls.py  views.py
trac-ui/apps/data_gateway/migrations/: 0002_dataset_schema.py  0003_dataset_backend_dataset_initialized_dataset_url.py  0004_alter_dataset_schema.py
trac-ui/apps/data_gateway/services/: gsheet.py
trac-ui/apps/data_gateway/templates/data_gateway/: create_dataset.html  swagger_ui.html  view_data.html
trac-ui/apps/trac_app/: apps.py  docker_utils.py  models.py  urls.py  views.py
trac-ui/apps/trac_app/templates/trac_app/: manage_instance.html  manage_instance_datasets.html  manage_instance_runs.html
trac-ui/templates/: base.html  nav.html
trac-ui/trac/: asgi.py  settings.py  urls.py
trac-ui/trac_ui/: asgi.py  settings.py  wsgi.py
(+121 files in other folders)
