[tool.poetry]
name = "trac-runtime"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"
packages = [{include = "trac_runtime"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
docker = "^6.0.0"
pyyaml = "^6.0"
jsonschema = "^4.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
