[tool.poetry]
name = "trac-ui"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"
packages = [{include = "trac_ui"}]

[tool.poetry.dependencies]
python = "^3.8"
crispy-bootstrap5 = "^0.7"
django = "^4.1.2"
django-crispy-forms = "^1.14.0"
djangorestframework = "^3.14.0"
docker = "^6.0.0"
nbconvert = "^7.2.2"
nbformat = "^5.7.0"
gspread = "^5.6.2"
trac = {path = "../adk", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
