[tool.poetry]
name = "trac"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.1"
tableschema = "^1.20.2"
docker = "^6.0.0"
pydantic = "^1.10.2"
pyyaml = "^6.0"
jsonschema = "^4.16.0"
kubernetes = "^24.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
