[tool.poetry]
name = "auto-timeseries"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"
packages = [{include = "auto_timeseries"}]

[tool.poetry.dependencies]
python = "^3.8"
autots = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
