[tool.poetry]
name = "vrp-demo-script"
version = "0.1.0"
description = ""
authors = ["Yuhui Shi <yuhui@convect.ai>"]
readme = "README.md"
packages = [{include = "vrp_demo_script"}]

[tool.poetry.dependencies]
python = "^3.8"
ortools = "^9.4.1874"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
